bin/testsuite/tests/compiler/src/compiler1463.swg
#global testerror "Err0722"
var @toto = 0 // swc-expected-error {{parser_err_invalid_intrinsic}}